[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/SpareParts/SourceCodeSelfFiller.gd" type="Script" id=1]
[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/SpareParts/ShaperTextCopy.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/ShapeTextCopy/SpareParts/OptioningDropdown.tscn" type="PackedScene" id=3]

[node name="SourceCodeSelfFiller" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="OptioningDropdown" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 1920.0
margin_bottom = 43.0
labelText = "Read a File..."

[node name="Label" parent="OptioningDropdown" index="0"]
margin_bottom = 43.0

[node name="OptionButton" parent="OptioningDropdown" index="2"]
margin_bottom = 43.0
text = "Main"
items = [ "Main", null, false, 0, null, "README.md", null, false, 1, null, "Check button", null, false, 2, null, "Title Header", null, false, 3, null, "Option abstract", null, false, 4, null, "Dropdown", null, false, 5, null, "Number spinner", null, false, 6, null, "Text Input", null, false, 7, null, "Source code reader", null, false, 8, null ]

[node name="SourceText" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_top = 47.0
margin_right = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_text = "[code]
print('hello world')
[/code]"
text = "
print('hello world')
"

[connection signal="hasChangedSelection" from="OptioningDropdown" to="." method="_on_OptioningDropdown_hasChangedSelection"]

[editable path="OptioningDropdown"]
